# Nolon-simulation-stack

./: .env  Dockerfile  README.md  docker-compose.yml  setup-docker.sh
nolon_bot_description/: CMakeLists.txt  package.xml
nolon_bot_description/config/: nolon_bot_control.yaml  nolon_bot_mapper.yaml  nolon_bot_navigation.yaml  nolon_gz_bridge.yaml
nolon_bot_description/launch/: mapping.launch.py  move_group.launch.py  navigation.launch.py  sim.launch.py
nolon_bot_description/maps/: map.pgm  map.yaml
nolon_bot_description/meshes/: ee.stl  some_tool.stl
nolon_bot_description/meshes/containment/: text.stl
nolon_bot_description/meshes/mobile_base/: front_wheel_holder_left.stl  front_wheel_holder_right.stl  front_wheel_joint_left.stl  front_wheel_joint_right.stl  front_wheel_left.stl  front_wheel_right.stl  main_wheel_joint_left.stl  main_wheel_joint_right.stl  rear_wheel_holder_left.stl  rear_wheel_holder_right.stl  rear_wheel_joint_left.stl  rear_wheel_joint_right.stl  rear_wheel_left.stl  rear_wheel_right.stl
nolon_bot_description/meshes/robotic_arm/: link1-2.stl  link1.stl  link2-3.stl  link2.stl  link3-4.stl  (+7 more)
nolon_bot_description/moveit_config/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  servo.yaml
nolon_bot_description/rviz/: nolon_bot_mapper.rviz  nolon_bot_moveit.rviz
nolon_bot_description/src/: teleop_force_node.cpp  teleop_node.cpp
nolon_bot_description/srdf/: robotic_arm.srdf.xacro
nolon_bot_description/urdf/: nolon_bot.urdf.xacro  sample.urdf.xacro
nolon_bot_description/world/: empty_world.sdf  not_so_empty_world.sdf
(+11 files in other folders)
